--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
     <main>
         <h2>About Me</h2>
         <p>
-            Hello! I'm a student at Ritsumeikan University studying Information Systems Engineering. I enjoy creating
-            things on the web, learning new programming languages, and reading technical books. In my free time, I love
-            hiking and photography. I believe that technology should solve real problems and improve lives. This website
-            showcases some of my projects and interests. Feel free to look around!
+         Hello! I am majoring in Information Systems Engineering at Ritsumeikan University. I like listening to music, reading manga and technical books. In my free time, I develop communication and GUI for the RoboCup small soccer league, and research OS and virtualization technologies. I believe that technology should solve real problems and make people's lives better.
         </p>
         <img src="https://via.placeholder.com/300x200" alt="My Hobby Image">
     </main>
